<resources>
    <string name="app_name">Smart Tracker</string>
    <string name="activtyTrackerTitle">Activity Tracker</string>
    <string name="activityTrackerButtonText">Activity Tracking</string>
    <string name="nutritionTrackerButtonText">Food Nutrition information tracker</string>
    <string name="houseThermostatButtonText">House Thermostat</string>
    <string name="automobileButtonText">Automobile</string>
    <string name="startTrackingButton">Start Tracking your Exercises</string>
    <string name="welcome_text">Welcome to Activity Tracker</string>
    <string name="selectTextView">Choose exercise</string>
    <string name="runningTextView">Running</string>
    <string name="walkingTextView">Walking</string>
    <string name="swimmingTextView">Swimming</string>
    <string name="bikingTextView">Biking</string>
    <string name="skatingTextView">Skating</string>
    <string name="durationTextView">Duration</string>
    <string name="commentsTextView">Comments</string>
    <string name="commentsEditText">How was your exercise?</string>
    <string name="progressTextView">Progress</string>
    <string name="addActivityButton">Add Activity</string>
    <string name="addNewActivityButtonText">Add New Activity</string>
    <string name="viewHistoryButtonText">View Activity History</string>
    <string name="activityHistoryTextView">Your Activity History</string>
    <string name="activityDetailsTextView">Activity Details</string>
    <string name="activityLabel">Activity</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="sortByDateButton">Sort by Date</string>
    <string name="sortByTime">Sort by time</string>
    <string name="monthlyStatusButton">View Monthly Status</string>
    <string name="monthStatusTextView">Monthly Status Report</string>
    <string name="CurrentMonthLabel">Time spent this month:</string>
    <string name="prevMonthLabel">Time spent last month:</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">Cancel</string>
    <string name="resetButton">Reset</string>
    <string name="backButton">Back to Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="help_tracker">"Version 1.0, by Sahar Saeednooran\n\n
Activity tracker is designed to track exercises. The user can add a new activity or view their previous activity history.
        "</string>

    <string name="nutritionTrackerTitle">Nutrition Tracker</string>
    <string name="food_add_name_hint">Name of food</string>
    <string name="food_add_cals_hint">Total Calories</string>
    <string name="food_add_fat_hint">Total Fats in grams</string>
    <string name="food_add_carbs_hint">Total Carbohydrates in grams</string>
    <string name="food_add_save">Save</string>
    <string name="food_add_cancel">Cancel</string>
    <string name="food_edit_name_label">Name of Food: </string>
    <string name="food_edit_cals_label">Calories: </string>
    <string name="food_edit_fat_label">Fat:</string>
    <string name="food_edit_carbs_label">Carbohydrates:</string>
    <string name="food_edit_date_label">Date Entered: </string>
    <string name="food_detail_edit_button">Edit</string>
    <string name="food_detail_delete_button">Delete</string>
    <string name="food_edit_cancel">Cancel</string>
    <string name="food_edit_save">Save</string>
    <string name="gram_unit_full"> gram</string>
    <string name="gram_unit_short">g</string>
    <string name="nutrition_average_calorie_label">Average Daily Calorie Intake:</string>
    <string name="nutrition_last_day_added_label">Calorie Intake For</string>
    <string name="daily_summary_fat_label">Total Fat: </string>
    <string name="daily_summary_carbs_label">Total Carbohydrates: </string>
    <string name="daily_summary_calories_label">Total Calories: </string>
    <string name="question_mark">\?</string>
    <string name="delete_food_prompt">Are you sure you want to delete: \u0020</string>
    <string name="nutrition_show_full_list">Full Food List</string>
    <string name="nutrition_show_summary_list">Summary List</string>
    <string name="nutrition_add_food">Add Food</string>
    <string name="nutrition_add_default">0</string>
    <string name="nutrition_cal_per_day">cal/day</string>
    <string name="nutrition_cal_unit">cal</string>
    <string name="nutrition_calories">Calories</string>
    <string name="nutrition_of_fat">of Fat</string>
    <string name="nutrition_of_carbs">of Carbohydrates</string>
    <string name="nutrition_edit_food">Edit Food</string>
    <string name="nutrition_saved_changes_to">Saved changes to:</string>
    <string name="nutrition_delete_food_title">Delete Food \?</string>
    <string name="nutrition_deleting">Deleting</string>
    <string name="nutrition_from_database">from Database.</string>
    <string name="nutrition_added">Added:</string>
    <string name="nutrition_food_added_snackbar">You have added </string>
    <string name="nutrition_to_database">to the Database.</string>
    <string name="daily_calorie_goal">2100</string>
    <string name="nutrition_activity_author">Corey MacLeod</string>
    <string name="nutrition_activity_version_num">3.0</string>
    <string name="nutrition_today_string">Today</string>
    <string name="nutriton_of_string">of</string>
    <string name="toolbar_about">About</string>
    <string name="nutrition_none_added">No Data Present</string>
    <string name="nutrition_help">Version 1.0, by Corey MacLeod\n\n
        An Activity designed to keep track of a user\'s food intake by allowing them to add every food item they eat during the day.
\n\n- The user can add the name, calorie count, fat/carbohydrate content and the item will be stored in a database linked to the app. If no values are entered when adding a food item, the value defaults to 0.
\n\n- The app will then calculate the user\'s average daily calorie intake and inform them of the total calories they consumed the last day they added food.
\n\n- A progress bar shows how much of their daily calorie goal they have consumed the last day they entered a food item.
\n\n- The App starts by displaying the Full Food List.
\n\n- Selecting one of these food items expands the item to also show its fat and carbohydrate content as well as two buttons that allow the user to either edit or completely delete the food item.
\n\n- When the user selects the Summary List button, the Summary List is displayed that shows the total calories, fat, and carbohydrates consumed by the user each day.</string>

    <string name="dateLabel">Date</string>
    <string name="purchaseDate">Purchase Date</string>
    <string name="litresLabel">Litres</string>
    <string name="purchaseLitres">Purchase Litres</string>
    <string name="costLabel">Cost</string>
    <string name="purchaseCost">Purchase Cost</string>
    <string name="kilometersLabel">Date</string>
    <string name="purchaseKilometers">Purchase Kilometers</string>
    <string name="autoEditButton">Edit</string>
    <string name="autoDeleteButton">Delete</string>
    <string name="autoCancelButton">Cancel</string>
    <string name="autoSaveButton">Save</string>

    <string name="automobile_edit_dialog_title">Edit Purchase</string>
    <string name="automobile_delete_dialog_title">Delete Purchase</string>
    <string name="automobile_add_dialog_title">Delete Purchase</string>

    <string name="deleteQuestion">Are you sure you want to delete this purchase?</string>

    <string name="averagePrice">Average Price of Gas over 30 Days</string>
    <string name="totalLitres">Total Litres of Gas over 30 Days</string>
    <string name="monthlyLabel">Number of Litres of Gas by Month</string>

    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="nov">November</string>
    <string name="oct">October</string>
    <string name="dec">December</string>
    <string name="unk">NA</string>

    <string name="autoClearData">Clear Data</string>
    <string name="addPurchase">Add Purchase</string>
    <string name="purchaseHistory">Purchase History</string>
    <string name="monthlyButton">Monthly Gas Summary</string>
    <string name="automobileTitle">Fuel Tracker</string>
    <string name="automobileFragmentLabel">Purchase Date:</string>

    <string name="automobile_help">Version 1.0, by Ryan Molitor\n\n
        An Activity designed to keep track of a user\'s fuel purchases.
\n\n- The main screen shows the calculated amounts for average price and fuel in last 30 days.
\n\n- The user has the option of adding a purchase, viewing a monthly summary of fuel purchase, or seeing a list of purchases.
\n\n- When adding a purchase, the program automatically sets the date to today, though this can be overriden by the user.  This is done to give the user an example of date formatt.  The user inputs the price they paid, the amount of litres purchased and the number of kilometers.  Hitting save adds the purchase to the database and cancel removes the dialoge box.
\n\n- Monthly gas summary tallies the amount of gas purchased by the user each month.  If there are no purchases, the system displays NA
\n\n- Purchase history displays a listview of purchase dates.  When one is selected, detailed information is presented to the user.  The user has the option to edit, delete or cancel.
\n\n- When ever the values in the database are changed, a new average is calculated.</string>

    <string name="automobileSumPrice">%1$s Litres</string>
    <string name="automobileAvgPrice">$%1$s</string>
    <string name="automobileZeroPrice">$0</string>
    <string name="automobileLitre">%1$sL</string>
    <string name="automobileKilo">%1$sKm</string>
    <string name="automobileCost">$%1$s</string>


</resources>