<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/food_add_name_hint"
        android:inputType="textCapWords"/>

    <EditText
        android:id="@+id/add_food_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/add_food_name"
        android:hint="@string/food_add_cals_hint"
        android:digits="0123456789"
        android:inputType="number"/>

    <EditText
        android:id="@+id/add_food_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/add_food_calories"
        android:hint="@string/food_add_fat_hint"
        android:inputType="number"
        android:digits="0123456789"/>

    <EditText
        android:id="@+id/add_food_carb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_food_fat"
        android:layout_alignParentStart="true"
        android:hint="@string/food_add_carbs_hint"
        android:inputType="number"
        android:digits="0123456789"/>

    <Button
        android:id="@+id/add_food_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/add_food_carb"
        android:text="@string/food_add_save" />

    <Button
        android:id="@+id/add_food_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/add_food_carb"
        android:text="@string/food_add_cancel" />
</RelativeLayout>

