<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/deleteQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteQuestion"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/deleteQuestion">

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/purchaseDate"
            android:text="@string/dateLabel" />

        <EditText
            android:id="@+id/deletePurchaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|start"
            android:inputType="date"
            android:text="@string/purchaseDate"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/litresLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/purchaseLitres"
            android:text="@string/litresLabel" />

        <EditText
            android:id="@+id/deletePurchaseLitres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="numberDecimal"
            android:text="@string/purchaseLitres"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/costLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@+id/purchaseCost"
            android:text="@string/purchaseCost" />

        <EditText
            android:id="@+id/deletePurchaseCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="numberDecimal"
            android:text="@string/purchaseCost"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/kilometersLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/purchaseKilometers"
            android:text="@string/purchaseKilometers" />

        <EditText
            android:id="@+id/deletePurchaseKilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:inputType="numberDecimal"
            android:layoutDirection="ltr"
            android:text="@string/purchaseKilometers"
            android:textAlignment="center" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/delete_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/autoDeleteButton" />

        <Button
            android:id="@+id/cancel_delete_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/autoCancelButton" />
    </RelativeLayout>

</RelativeLayout>
