<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/deleteQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteQuestion"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_below="@+id/deleteQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/autoDeleteButton" />

        <Button
            android:id="@+id/cancel_delete_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/autoCancelButton" />
    </RelativeLayout>

</RelativeLayout>
